@@ -1,24 +1,22 @@
 package com.example.cabonerfbe.services.impl;
 
+import com.example.cabonerfbe.config.RabbitMQConfig;
 import com.example.cabonerfbe.converter.*;
-import com.example.cabonerfbe.dto.PageList;
 import com.example.cabonerfbe.dto.ProcessDetailDto;
 import com.example.cabonerfbe.dto.ProcessDto;
 import com.example.cabonerfbe.dto.ProcessImpactValueDto;
 import com.example.cabonerfbe.enums.Constants;
+import com.example.cabonerfbe.enums.MessageConstants;
 import com.example.cabonerfbe.exception.CustomExceptions;
 import com.example.cabonerfbe.models.*;
 import com.example.cabonerfbe.models.Process;
 import com.example.cabonerfbe.repositories.*;
 import com.example.cabonerfbe.request.CreateProcessRequest;
-import com.example.cabonerfbe.request.GetAllProcessRequest;
 import com.example.cabonerfbe.request.UpdateProcessRequest;
-import com.example.cabonerfbe.response.CreateProcessResponse;
+import com.example.cabonerfbe.services.MessagePublisher;
 import com.example.cabonerfbe.services.ProcessService;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -28,6 +26,7 @@ import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 public class ProcessServiceImpl implements ProcessService {
 
     @Autowired
@@ -56,73 +55,55 @@ public class ProcessServiceImpl implements ProcessService {
     private ImpactCategoryConverter categoryConverter;
     @Autowired
     private UnitConverter unitConverter;
+    @Autowired
+    private MessagePublisher messagePublisher;
+
+    public static final double NEW_OVERALL_FLOW = 0;
 
     private final ExecutorService executorService = Executors.newFixedThreadPool(50);
 
     @Override
-    public ProcessDetailDto createProcess(CreateProcessRequest request) {
+    public ProcessDto createProcess(CreateProcessRequest request) {
+        LifeCycleStage lifeCycleStage = lifeCycleStageRepository.findByIdAndStatus(request.getLifeCycleStagesId(), Constants.STATUS_TRUE).orElseThrow(
+                () -> CustomExceptions.notFound(MessageConstants.NO_LIFE_CYCLE_STAGE_FOUND)
+        );
+
+        Project project = projectRepository.findById(request.getProjectId()).orElseThrow(
+                () -> CustomExceptions.notFound(MessageConstants.NO_PROJECT_FOUND)
+        );
+
         Process process = new Process();
         process.setName(request.getName());
-
-        if (processRepository.findById(request.getId()).isPresent()) {
-            throw CustomExceptions.badRequest(Constants.RESPONSE_STATUS_ERROR, "Process with id " + request.getId() + " already exists");
-        }
-
-        process.setId(request.getId());
-        if (lifeCycleStageRepository.findById(request.getLifeCycleStagesId()).isEmpty()) {
-            throw CustomExceptions.notFound(Constants.RESPONSE_STATUS_ERROR, "Life cycle stage not exist");
-        }
-        process.setLifeCycleStage(lifeCycleStageRepository.findById(request.getLifeCycleStagesId()).get());
-        Optional<Project> project = projectRepository.findById(request.getProjectId());
-        if (project.isEmpty()) {
-            throw CustomExceptions.badRequest(Constants.RESPONSE_STATUS_ERROR, Map.of("projectId", "Not exist"));
-        }
-        process.setProject(projectRepository.findById(request.getProjectId()).get());
-        process.setOverAllProductFlowRequired(0);
-
+        process.setLifeCycleStage(lifeCycleStage);
+        process.setProject(project);
+        process.setOverAllProductFlowRequired(NEW_OVERALL_FLOW);
         process = processRepository.save(process);
 
-//        List<ImpactMethodCategory> list = impactMethodCategoryRepository.findByMethod(project.get().getLifeCycleImpactAssessmentMethod().getId());
-//        List<ProcessImpactValue> processImpactValues = new ArrayList<>();
-//
-//
-//        for(ImpactMethodCategory x: list){
-//            ProcessImpactValue piv = new ProcessImpactValue();
-//            Random random = new Random();
-//            piv.setUnitLevel(random.nextDouble());
-//            piv.setProcess(process);
-//            piv.setImpactMethodCategory(x);
-//            piv.setSystemLevel(random.nextDouble());
-//            piv.setOverallImpactContribution(0);
-//            processImpactValues.add(piv);
-//        }
-//
-//        processImpactValueRepository.saveAll(processImpactValues);
+        ProcessDto processDto = processConverter.fromProcessToProcessDto(process);
+        processDto.setImpacts(new ArrayList<>());
+        processDto.setExchanges(new ArrayList<>());
 
-        return processConverter.INSTANCE.fromProcessDetailToProcessDto(process);
+        return processDto;
     }
 
     @Override
     public ProcessDto getProcessById(UUID id) {
-        Optional<Process> process = processRepository.findByProcessId(id);
-        if (process.isEmpty()) {
-            throw CustomExceptions.notFound(Constants.RESPONSE_STATUS_ERROR, "Process not exist");
-        }
+        Process process = processRepository.findByProcessId(id).orElseThrow(
+                () -> CustomExceptions.notFound(MessageConstants.NO_PROCESS_FOUND)
+        );
+        ProcessDto dto = processConverter.fromProcessToProcessDto(process);
 
-        ProcessDto dto = processConverter.fromProcessToProcessDto(process.get());
-
-        dto.setImpacts(converterProcess(processImpactValueRepository.findByProcessId(process.get().getId())));
-        dto.setExchanges(exchangesConverter.fromExchangesToExchangesDto(exchangesRepository.findAllByProcess(process.get().getId())));
+        dto.setImpacts(converterProcess(processImpactValueRepository.findByProcessId(process.getId())));
+        dto.setExchanges(exchangesConverter.fromExchangesToExchangesDto(exchangesRepository.findAllByProcess(process.getId())));
 
         return dto;
     }
 
     @Override
-    public List<ProcessDto> getAllProcesses(UUID projectId) {
-        Optional<Project> project = projectRepository.findById(projectId);
-        if (project.isEmpty()) {
-            throw CustomExceptions.notFound(Constants.RESPONSE_STATUS_ERROR, "Project not exist");
-        }
+    public List<ProcessDto> getAllProcessesByProjectId(UUID projectId) {
+        Project project = projectRepository.findById(projectId).orElseThrow(
+                () -> CustomExceptions.notFound(MessageConstants.NO_PROJECT_FOUND)
+        );
         List<ProcessDto> processDtos = processRepository.findAll(projectId).stream().map(processConverter::fromProcessToProcessDto).collect(Collectors.toList());
 
         if (processDtos.isEmpty()) {
@@ -138,34 +119,30 @@ public class ProcessServiceImpl implements ProcessService {
 
     @Override
     public ProcessDetailDto updateProcess(UUID id, UpdateProcessRequest request) {
-        Optional<Process> process = processRepository.findByProcessId(id);
-        if (process.isEmpty()) {
-            throw CustomExceptions.notFound(Constants.RESPONSE_STATUS_ERROR, "Process not exist");
-        }
-        Optional<LifeCycleStage> lifeCycleStage = lifeCycleStageRepository.findById(request.getLifeCycleStagesId());
+        Process process = processRepository.findByProcessId(id).orElseThrow(
+                () -> CustomExceptions.notFound(MessageConstants.NO_PROCESS_FOUND)
+        );
 
-        if (lifeCycleStage.isEmpty()) {
-            throw CustomExceptions.notFound(Constants.RESPONSE_STATUS_ERROR, "Life cycle stage not found");
-        }
+        LifeCycleStage lifeCycleStage = lifeCycleStageRepository.findByIdAndStatus(request.getLifeCycleStagesId(), Constants.STATUS_TRUE).orElseThrow(
+                () -> CustomExceptions.notFound(MessageConstants.NO_LIFE_CYCLE_STAGE_FOUND)
+        );
 
-        process.get().setLifeCycleStage(lifeCycleStage.get());
-        process.get().setDescription(request.getDescription());
-        process.get().setName(request.getName());
+        process.setLifeCycleStage(lifeCycleStage);
+        process.setDescription(request.getDescription());
+        process.setName(request.getName());
 
-        return processConverter.fromProcessDetailToProcessDto(processRepository.save(process.get()));
+        return processConverter.fromProcessDetailToProcessDto(processRepository.save(process));
     }
 
     @Override
     public String deleteProcess(UUID id) {
-        Optional<Process> process = processRepository.findByProcessId(id);
-        if (process.isEmpty()) {
-            throw CustomExceptions.notFound(Constants.RESPONSE_STATUS_ERROR, "Process not exist");
-        }
-        process.get().setStatus(false);
-        processRepository.save(process.get());
-        return "[]";
+        Process process = processRepository.findByProcessId(id).orElseThrow(
+                () -> CustomExceptions.notFound(MessageConstants.NO_PROCESS_FOUND)
+        );
+        process.setStatus(false);
+        processRepository.save(process);
+        return process.getId().toString();
     }
-
 
     private List<ProcessImpactValueDto> converterProcess(List<ProcessImpactValue> list) {
 
@@ -180,14 +157,20 @@ public class ProcessServiceImpl implements ProcessService {
                     p.setImpactCategory(categoryConverter.fromProjectToImpactCategoryDto(x.getImpactMethodCategory().getImpactCategory()));
                     return p;
                 }, executorService))
-                .collect(Collectors.toList());
+                .toList();
 
         CompletableFuture<Void> allFuture = CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]));
         allFuture.join();
 
-        List<ProcessImpactValueDto> result = futures.stream()
+        return futures.stream()
                 .map(CompletableFuture::join)
                 .collect(Collectors.toList());
-        return result;
+    }
+
+//    @RabbitListener(queues = RabbitMQConfig.CREATE_PROCESS_QUEUE)
+    public void createProcessListener(CreateProcessRequest request) {
+        log.info("create process message from nodeBased server: {}", request);
+        ProcessDto processDto = createProcess(request);
+        messagePublisher.publishCreateProcess(RabbitMQConfig.CREATED_PROCESS_EXCHANGE, RabbitMQConfig.CREATED_PROCESS_ROUTING_KEY, processDto);
     }
 }
